# eRISReportUpdates

./: .gitignore
.github/agents/: BusinessAnalyst.agent.md  DotnetDeveloper.agent.md  PromptEngineer.agent.md  README.MD  SQLDeveloper.agent.md  SQLReviewer.agent.md  ScreenRapidPrototype.agent.md  TechnicalWriter.agent.md
.github/instructions/: codequality.instructions.md  hints.instructions.md  modeltone.instructions.md  securitydesign.instructions.md  thirdparty.instructions.md
.github/prompts/: README.md  create-proposal.prompt.md  create_agent.prompt.md  review-proposal.prompt.md  sqlreview.prompt.md  sqlreviewcleanup.prompt.md
docs/: contributing.md  docfx.json  index.md  installation.md  release.md  toc.yml  upgrade.md
eris/input/reports/: All Billing Queries - rmz _Total Check_.rptdesign  Cambridge and Rural - Continuous Monitoring Data Review - OReg 170 03 6-5.rptdesign  Consumption - Index for IUS Kit - Mann SA.rptdesign  Consumption - Index for IUS Kit - rawbytime QVA tags.rptdesign  Consumption - Index for IUS Kit.rptdesign  Consumption - Index for IUS Wat Cam - Midd SA.rptdesign  Consumption - Index for IUS Wat Cam - rawbytime QVA tags.rptdesign  Consumption - Index for IUS Wat Cam.rptdesign  Daily Flow Check - Rural v6G.rptdesign  EEI_exceedancesReportFinal v1g.rptdesign  Pump_Volumes.rptdesign  (+11 more)
src/: ifix_to_ign_010152026.csv  ifix_to_ign_2026_02_19.csv
tooling/python/bootstrap/: README.md  pyproject.toml
tooling/python/bootstrap/src/agentkit/: agentkit_cli.py  answers.py  config.py  github.py  parser.py  rendering.py  templates.py
(+634 files in other folders)
